# TESST

./: .env  .replit  README.md  bot.py  config.json  main.py  pyproject.toml  replit.nix  requirements.txt  run.py  zombie.py  اضف لقائمتي.py
MZombie/: zombie.py
audio/: zombie.py
plugins/: __init__.py  start.py
users/FN2_FO_X_BOT/: group_data.json
users/HWARY11_BOT/: chat_locks.json  group_data.json  likes.json
users/M_66_Mbot/: group_data.json  unknown_errors.txt
users/S_HEBLLLV_bot/: chat_locks.json  group_data.json
users/TM5_5BOT/: chat_locks.json  group_data.json  zombie.py
users/l_lbb_lll_88Bot/: group_data.json  likes.json
users/re_czx_bot/: chat_locks.json  group_data.json  likes.json
users/so_sso_bot/: group_data.json  unknown_errors.txt
users/sudaaan_bot/: group_data.json  likes.json  zombie.py
