[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tesst-bot"
version = "2.0.0"
description = "TESST Bot - بوت تليجرام متطور"
authors = [
    {name = "رعد", email = "ra3d@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "aiofiles==23.2.1",
    "aiohttp==3.9.1",
    "dnspython==2.4.2",
    "ffmpeg-python==0.2.0",
    "gitpython==3.1.40",
    "hachoir==3.2.0",
    "heroku3==5.2.0",
    "lyricsgenius==3.0.1",
    "motor==3.3.2",
    "pillow==10.1.0",
    "psutil==5.9.6",
    "py-tgcalls==0.9.7",
    "pykeyboard==0.1.5",
    "pyrogram==2.0.106",
    "pyromod==1.5",
    "python-dotenv==1.0.0",
    "pyyaml==6.0.1",
    "requests==2.31.0",
    "speedtest-cli==2.1.3",
    "spotipy==2.22.1",
    "tgcrypto==1.2.5",
    "youtube-search==2.1.2",
    "youtube-search-python==1.6.6",
    "yt-dlp==2023.11.16"
]

[project.urls]
Homepage = "https://t.me/RA3D_OFFICEL"
Repository = "https://github.com/DEV-Ra3d/TESST"
"Bug Tracker" = "https://t.me/KOJLM"
